--- a/templates/index.html
+++ b/templates/index.html
@@ -1248,11 +1248,8 @@
         </form>
     </div> <!-- edit main box end -->
 </div><!-- edit controller end -->
-<script type="text/javascript" src="${pageContext.request.contextPath}/resources/tui/scripts/jquery.js"></script>
-<script type="text/javascript" src="${pageContext.request.contextPath}/resources/oc/scripts/sea-modules/jquery/validate/jquery.metadata.js"></script>
-<script type="text/javascript" src="${pageContext.request.contextPath}/resources/oc/scripts/sea-modules/jquery/validate/jquery.validate.js"></script>
-<script type="text/javascript" src="${pageContext.request.contextPath}/resources/oc/scripts/sea-modules/jquery/validate/messages_zh.js"></script>
-<script type="text/javascript" src="${pageContext.request.contextPath}/resources/oc/scripts/sea-modules/jquery/validate/additional-methods.js"></script>
+<script type="text/javascript" 
+    src="${pageContext.request.contextPath}/resources/tui/scripts/jquery.js"></script>
 </body>
-
+</body>
 </html>
