--- a/ocmoni/src/style/jquery_ui.datepicker-modify.css
+++ b/ocmoni/src/style/jquery_ui.datepicker-modify.css
@@ -33,7 +33,7 @@
 
 /* Overlays */
 .ui-widget-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-.ui-datepicker { width: 20em; padding: .2em .2em 0; display: none;border:1px solid red; background:url(images/tui_datepicker_bg.png) repeat-x left top; }
+.ui-datepicker { width: 20em; padding: .2em .2em 0; display: none;border:1px solid red; background:url(../images/tui_datepicker_bg.png) repeat-x left top; }
 /*modify by machi 0411*/
 .ui-datepicker .ui-datepicker-header { position:relative; padding:0; }
 .ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { position:absolute; top: 2px; width: 1.8em; height: 1.8em; cursor:pointer; }
@@ -122,7 +122,7 @@
 /*modify by machi 0411*/
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  {border: 1px solid #7895b3; background:#d1e8ff; color: #7892aa; }
 .ui-state-highlight a, .ui-widget-content .ui-state-highlight a,.ui-widget-header .ui-state-highlight a { color: #363636; }
-.ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error {border: 1px solid #cd0a0a; background: #fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; color: #cd0a0a; }
+.ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error {border: 1px solid #cd0a0a; background: #fef1ec url(../images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; color: #cd0a0a; }
 .ui-state-error a, .ui-widget-content .ui-state-error a, .ui-widget-header .ui-state-error a { color: #cd0a0a; }
 .ui-state-error-text, .ui-widget-content .ui-state-error-text, .ui-widget-header .ui-state-error-text { color: #cd0a0a; }
 .ui-priority-primary, .ui-widget-content .ui-priority-primary, .ui-widget-header .ui-priority-primary { font-weight: bold; }
@@ -133,15 +133,15 @@
 ----------------------------------*/
 
 /* states and images */
-.ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_469bdd_256x240.png); }
-.ui-widget-content .ui-icon {background-image: url(images/ui-icons_469bdd_256x240.png); }
+.ui-icon { width: 16px; height: 16px; background-image: url(../images/ui-icons_469bdd_256x240.png); }
+.ui-widget-content .ui-icon {background-image: url(../images/ui-icons_469bdd_256x240.png); }
 /*modify by machi 0411*/
-.ui-widget-header .ui-icon {background-image: url(images/tui_datepicker_icon.png); }
-.ui-state-default .ui-icon { background-image: url(images/ui-icons_6da8d5_256x240.png); }
-.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(images/tui_datepicker_icon.png); }
-.ui-state-active .ui-icon {background-image: url(images/ui-icons_f9bd01_256x240.png); }
-.ui-state-highlight .ui-icon {background-image: url(images/ui-icons_2e83ff_256x240.png); }
-.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(images/ui-icons_cd0a0a_256x240.png); }
+.ui-widget-header .ui-icon {background-image: url(../images/tui_datepicker_icon.png); }
+.ui-state-default .ui-icon { background-image: url(../images/ui-icons_6da8d5_256x240.png); }
+.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(../images/tui_datepicker_icon.png); }
+.ui-state-active .ui-icon {background-image: url(../images/ui-icons_f9bd01_256x240.png); }
+.ui-state-highlight .ui-icon {background-image: url(../images/ui-icons_2e83ff_256x240.png); }
+.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(../images/ui-icons_cd0a0a_256x240.png); }
 
 /* positioning */
 .ui-icon-carat-1-n { background-position: 0 0; }
@@ -334,15 +334,15 @@
 .ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px; -khtml-border-bottom-right-radius: 5px; border-bottom-right-radius: 5px; }
 
 /* Overlays */
-.ui-widget-overlay { background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .3;filter:Alpha(Opacity=30); }
-.ui-widget-shadow { margin: -8px 0 0 -8px; padding: 8px; background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .3;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -khtml-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; }
+.ui-widget-overlay { background: #aaaaaa url(../images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .3;filter:Alpha(Opacity=30); }
+.ui-widget-shadow { margin: -8px 0 0 -8px; padding: 8px; background: #aaaaaa url(../images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .3;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -khtml-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; }
 
 /*******tui css*******/
 /* datepicker when show lunar calendar */
 .ui-datepicker td .tui_lunar_date{ font-size:0.74em; color:#65809c; font-weight:100; background:none; border:none;}
 .ui-datepicker .ui-state-active .tui_lunar_date{ color:#fff;}
 .ui-datepicker .ui-datepicker-today .ui-state-active .tui_lunar_date{color:#6c6c6c;}
-.ui-datepicker .tui_festival_mark{ width:10px; height:10px; float:left; background:url(images/tui_datepicker_icon.png) no-repeat 0 -152px;}
+.ui-datepicker .tui_festival_mark{ width:10px; height:10px; float:left; background:url(../images/tui_datepicker_icon.png) no-repeat 0 -152px;}
 
 .ui-datepicker-calendar{ border-collapse:collapse;}
 .ui-datepicker-calendar tr td{ border:1px solid #d5e0ec; padding:0; width:100px;}
