--- a/ocmoni2/src/style/oc_style.css
+++ b/ocmoni2/src/style/oc_style.css
@@ -1,8 +1,8 @@
 /*
- * @author
+ * @author 
  * @version 0.1.1
  * history:
- * 2014-01-15
+ * 2014-01-15 
 */
 @charset "utf-8";
 /*------------ global ------------*/
@@ -22,7 +22,7 @@
 .marginRight15{margin-right:15px;}
 .marginRL15{margin: 0 15px;}
 .marginRL2{margin: 0 2px;}
-
+	
 
 
 /*------------ brand ------------*/
@@ -103,7 +103,7 @@ a.modify { background-position:-18px -32px; cursor:pointer;}
 .srch_input img { float:left; margin:4px 0 0 -25px;}
 .service_list, .service_last_list { height:230px; overflow-y:auto; padding:5px 0;}
 .service_list ul li, .service_last_list ul li { line-height:24px; margin-top:1px; padding:0 5px; border-bottom:1px solid #F1F1F1; cursor:pointer;}
-.service_last_list ul li { cursor:default;}
+ .service_last_list ul li { cursor:default;}
 .service_list ul li { background:url("../images/iconsprite.png") no-repeat scroll right -105px rgba(0, 0, 0, 0);}
 .service_list ul li.bg_gray, .service_last_list ul li.bg_gray { background-color:#F7F7F7;}
 .service_list ul li:hover, .service_list ul li.selected, .service_last_list ul li:hover, .service_last_list ul li.selected { background-color:#C9D1DC;}
@@ -168,7 +168,6 @@ select.select_width_lg{ width:200px;}
 .dropDownIconLayout{ width:26px; height:26px; margin-left:-1px; background-color:#F1F1F1; border-radius: 3px; border: 1px solid #B1B1B1;}
 .dropDownIconLayout:hover{ cursor:pointer;}
 .dropDownIconLayout i{ position:absolute; padding:5px 0 0 5px;}
-
 /*****************  basicDataConfig *********************/
 .tableLayout{ margin-top:20px; padding:20px; background-color:#FFF; box-shadow:0px 1px 2px #333; border-radius:3px;}
 .tableLayout table{ width:100%;}
@@ -181,19 +180,19 @@ select.select_width_lg{ width:200px;}
 .discountCheck{ background-color: #F20;color: white;}
 .inputDisabled{cursor: not-allowed;background-color: #999999;opacity: 0.3;}
 .chooseInputWidth{width:163px;}
-td input{margin: 0px ;height:16px;}
-td select{margin: 0px;padding: 0px;height: 23px;}
+td input{margin: 0px ;height:14px;}
+td select{margin: 0px;padding: 0px;height: 21px;}
 .helper_margin_top5{margin-top: 5px;}
 .reusetbnoinput{display: inline-block; width: 76px;border-radius: 5px;}
 .searchinput{display: block; position: absolute;right: 6px;top: -2px;}
 .pointer{cursor: pointer;}
-.loading{position: fixed;top: 50%;left: 50%;width: 150px;height: 150px;margin-left: -100px;margin-top: -100px;background-image: url("../images/loading.gif");}
+.loading{position: fixed;top: 50%;left: 50%;width: 32px;height: 32px;margin-left: -16px;margin-top: -16px;background-image: url("../images/loading.gif");}
 .datebox{display: inline-block;width: 18px;height: 25px;color:#7397D0;margin-left: -25px;box-sizing:border-box;
-	-moz-box-sizing:border-box; /* Firefox */-webkit-box-sizing:border-box; /* Safari */cursor:pointer;}
+    -moz-box-sizing:border-box; /* Firefox */-webkit-box-sizing:border-box; /* Safari */cursor:pointer;}
 .useDateInfo{width: 126px;}
 /**button相关样式start**/
 .btn {-moz-user-select: none;background-image: none;border: 1px solid transparent;border-radius: 4px;cursor: pointer;display: inline-block;font-size: 14px;
-	font-weight: 400;line-height: 1.42857; margin-bottom: 0;padding: 6px 12px;text-align: center;vertical-align: middle;white-space: nowrap;}
+    font-weight: 400;line-height: 1.42857; margin-bottom: 0;padding: 6px 12px;text-align: center;vertical-align: middle;white-space: nowrap;}
 .btn-default {background-color: #fff;border-color: #ccc;color: #333;}
 .btn-primary {background-color: #337ab7;border-color: #2e6da4;color: #fff;}
 .btn.focus,.btn:focus,.btn:hover{color: #333;text-decoration: none;}
@@ -205,13 +204,13 @@ td select{margin: 0px;padding: 0px;height: 23px;}
 .modal-mask_2{position: fixed;width: 100%;height: 100%;top: 0;left: 0;background: rgba(0,0,0,.3);z-index:1;}
 .modal-dialog_2{position: fixed;width: 400px;min-height: 150px;top: 0;left: 0;z-index:2;}
 .modal-content_2{border-radius: 5px;background-color: #fff;border: 1px solid rgba(0,0,0,.2);outline: 0;box-sizing: border-box;
-	-moz-box-sizing:border-box; -webkit-box-sizing:border-box;box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);}
+    -moz-box-sizing:border-box; -webkit-box-sizing:border-box;box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);}
 .modal-header_2{box-sizing: border-box;-moz-box-sizing:border-box; -webkit-box-sizing:border-box;border-bottom: 1px solid #e5e5e5;min-height: 16.43px;padding: 15px;}
 .modal-title_2{line-height: 1.42857;margin: 0;}
 .modal-title_2{font-size: 18px;}
 .modal-header_2 .modal-close_2 {margin-top: -2px;}
 .modal-close_2 {background: rgba(0, 0, 0, 0) none repeat scroll 0 0;border: 0 none;cursor: pointer;padding: 0;
-	color: #000;float: right;font-size: 21px;font-weight: 700; line-height: 1;opacity: 0.2;text-shadow: 0 1px 0 #fff;}
+color: #000;float: right;font-size: 21px;font-weight: 700; line-height: 1;opacity: 0.2;text-shadow: 0 1px 0 #fff;}
 .modal-body_2 {box-sizing: border-box;-moz-box-sizing:border-box;  -webkit-box-sizing:border-box; padding: 15px; position: relative;}
 .modal-footer_2 {box-sizing: border-box;-moz-box-sizing:border-box; -webkit-box-sizing:border-box; border-top: 1px solid #e5e5e5;padding: 15px;text-align: right;}
 .modal-body_2 .input_title_2{display: inline-block;width:90px;}
@@ -229,10 +228,10 @@ td select{margin: 0px;padding: 0px;height: 23px;}
 .tb_select{width: 80px;}
 .errorContainer_validate{/*position: relative;*/}
 .errorInfo_validate{
-	display: inline-block;height: 18px;border-radius: 2px;font-size: 12px;font-weight: 400;font-style: normal;line-height: 20px;padding-left: 8px;padding-right: 8px;padding-bottom: 2px;
-	margin-left: 5px;color: #EA5200;border: 1px solid #eaabab;vertical-align: middle;direction: ltr;background-color: #ffe8e8;}
+    display: inline-block;height: 18px;border-radius: 2px;font-size: 12px;font-weight: 400;font-style: normal;line-height: 20px;padding-left: 8px;padding-right: 8px;padding-bottom: 2px;
+    margin-left: 5px;color: #EA5200;border: 1px solid #eaabab;vertical-align: middle;direction: ltr;background-color: #ffe8e8;}
 .errorInfo_validate_td{display: inline-block;position: absolute;height: 18px;border-radius: 2px;font-size: 12px;font-weight: 400;font-style: normal;line-height: 20px;padding-left: 8px;
-	padding-right: 8px;padding-bottom: 2px;margin-left: 5px;color: #EA5200;border: 1px solid #eaabab;vertical-align: middle;direction: ltr;background-color: #ffe8e8;z-index: 10;top: 5px;width: 80px;}
+    padding-right: 8px;padding-bottom: 2px;margin-left: 5px;color: #EA5200;border: 1px solid #eaabab;vertical-align: middle;direction: ltr;background-color: #ffe8e8;z-index: 10;top: 5px;width: 80px;}
 /*****************  xmlValidate *********************/
 .xmlResponseLayout{ position:fixed; width: 99.3%; bottom:0; background-color:#C8D2DD; border-top:1px solid #999;}
 .responseLayout{ margin:7px 0 7px 10px;}
@@ -273,18 +272,20 @@ ul.dropdown-menu-oc{
 	box-sizing:border-box;
 	background-color:#E9E9E9;
 	padding: 0;
-	margin-top: -3px;
+	margin: 0;
 	width: 100%;
 	top: 30px;
 	left: 0;
 	z-index: 10;
 	display: none;
-	border: 1px solid #BEBEBE;
+	border-left: 1px solid #BEBEBE;
+	border-right: 1px solid #BEBEBE ;
+	border-bottom: 1px solid #BEBEBE ;
 	border-radius: 2px;
-	box-shadow: 1px 1px 2px #BEBEBE;
-	-moz-box-shadow: 1px 1px 2px #BEBEBE;
-	-webkit-box-shadow: 1px 1px 2px #BEBEBE;
-	-o-box-shadow: 1px 1px 2px #BEBEBE;
+	box-shadow: 2px 2px 3px #888888;
+    -moz-box-shadow: 2px 2px 3px #888888;
+    -webkit-box-shadow: 2px 2px 3px #888888;
+    -o-box-shadow: 2px 2px 3px #888888;
 }
 ul.dropdown-menu-oc> li{
 	padding: 0 14px;
@@ -301,9 +302,9 @@ ul.dropdown-menu-oc> li:hover{
 ul.dropdown-menu-oc.open{
 	display: block;
 }
-
-
-
+.tb_normal_input{
+	width:60px
+}
 
 
 
