--- a/ocmoni3/html/index.css
+++ b/ocmoni3/html/index.css
@@ -10,7 +10,7 @@ body{
 }
 .query_section{
     width: 100%;
-    height: 42px;
+    min-height: 42px;
     padding: 3px 0;
     background-color: #00b3ee;
     background:#fff url(../images/tui_div4_bg.png) repeat-x left bottom;
@@ -19,6 +19,6 @@ body{
     font-size: 12px;
     font-weight: 100;
 }
-.query_content{
+.query_row{
     line-height: 36px;
 }
