--- a/ocmoni3/html/index.css
+++ b/ocmoni3/html/index.css
@@ -5,8 +5,9 @@ body{
 .main_content{
     margin-top: 10px;
     height: 100%;
-    padding: 0 25px;
 }
+
+/**查询条件相关 start*/
 .query_section{
     margin-top: 50px;
     width: 100%;
@@ -35,7 +36,7 @@ body{
 .query_section label{
     font-weight: 100;
 }
-
+/**查询条件相关 end*/
 .checkbox label{
     float: right;
     margin-top: 8px;
@@ -62,6 +63,15 @@ body{
 
 .marginLR15{
     margin :0 15px;
+}
+
+.productsImg{
+    width: 50px;
+    height: 50px;
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    background-image: url('../images/products/0B5.jpg');
 }
 
 
