--- a/ocmoni3/html/index.css
+++ b/ocmoni3/html/index.css
@@ -68,11 +68,12 @@ body{
 .productsImg{
     width: 50px;
     height: 50px;
-    margin: 0;
-    padding: 0;
     display: inline-block;
-    background-image: url('../images/products/0B5.jpg');
 }
+
+/**s7查询页面特有的样式 start*/
+
+/**s7查询页面特有的样式 end*/
 
 
 
