s7query页面原型整理完成第一版

--- a/ocmoni3/html/index.css
+++ b/ocmoni3/html/index.css
@@ -54,6 +54,17 @@ body{
 .marginLR5{
     margin :0 5px;
 }
+
+.marginL10{
+    margin-left: 10px;
+}
+.marginR10{
+    margin-right: 10px;
+}
+.marginLR10{
+    margin :0 10px;
+}
+
 .marginL15{
     margin-left: 15px;
 }
@@ -69,10 +80,35 @@ body{
     width: 50px;
     height: 50px;
     display: inline-block;
+    background-image: url('../images/products/0B5.jpg');
 }
 
-/**s7查询页面特有的样式 start*/
 
+/**s7查询页面特有的样式 start*/
+.s7_list_row:after{
+    clear: both;
+}
+
+.s7_list_row .s7_list_item{
+    display: inline-block;
+    height: 50px;
+    overflow: hidden;
+    white-space: nowrap;
+    line-height: 50px;
+    box-sizing: border-box;
+}
+
+.s7_list_descr{
+    width: 25%;
+}
+.s7_list_checkbox{
+    width: 5%;
+    text-align: center;
+}
+.s7_list_price{
+    text-align: right;
+    width: 10%;
+}
 /**s7查询页面特有的样式 end*/
 
 
