--- a/ocmoni5/css/s7Edit2.css
+++ b/ocmoni5/css/s7Edit2.css
@@ -49,6 +49,38 @@
     width: 90%;
     padding:15px 0px 5px;
 }
+.table_layout{
+    width:540px;
+    padding:5px;
+    border:1px solid #EFEFEF;
+    border-radius:3px;
+    background-color:#FFF;
+}
+.table_layout table{
+    border-top:1px solid #DDD;
+    border-left:1px solid #DDD;
+    width:100%;
+}
+.table_layout table tr th,.table_layout table tr td{
+    border-right:1px solid #DDD;
+    border-bottom:1px solid #DDD;
+    padding:1px 5px;
+}
+.table_layout table tr th{
+    text-align:center;
+    font-weight:bold;
+    background-color:#EEE;
+}
+.table_layout table tr:hover{
+    background-color:#F7F7F7;
+}
+/*td input{margin: 0px ;height:25px;}*/
+td input{margin: 0px ;
+    height: 23px;
+}
+td select{margin: 0px;
+    height: 16px;
+}
 
 /****用于checkbox和radio等input框的整合样式****/
 /******链接型按钮******/
@@ -69,4 +101,10 @@
 .pure-control-group label{
     font-weight: 200;
 }
+
+.radioLabel{
+    vertical-align: middle;
+    margin: 0 5px;
+}
+
 
