--- a/ocmoni5/css/common.css
+++ b/ocmoni5/css/common.css
@@ -6,9 +6,11 @@ body{
     background-color: #F2F4F7;
     min-width: 1100px;
     font-size: 12px;
+    font-family: "lucida grande",Helvetica,Tahoma,Verdana,Arial,Microsoft YaHei,simsun,sans-serif;
 }
 .main_content{
     padding-top: 106px;
+    padding-bottom: 30px;
     height: 100%;
 }
 /*bootstrap 样式重置start*/
