--- a/ocmoni5/css/s7Edit4.css
+++ b/ocmoni5/css/s7Edit4.css
@@ -106,11 +106,30 @@
     padding-top: 7px;
 }
 
-.checkbox-inline label{
+.checkbox-inline label,.radio-inline label{
+    font-size: 12px;
+    font-weight: 100;
     padding-top: 2px;
 }
 .form-horizontal .control-label{
+    font-weight: 100;
     margin-right: 5px;
 }
+
+.form-horizontal .input_error_tip{
+    display: inline-block;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 7px;
+    color: red;
+    margin-left: 5px;
+}
+.form-horizontal .form-group{
+    margin-bottom: 5px;
+}
+/*.input_error_tip{
+    vertical-align: middle;
+    padding-top: 7px;
+}*/
 
 
