--- a/ocmoni5/css/common.css
+++ b/ocmoni5/css/common.css
@@ -105,6 +105,43 @@ body{
     margin-left: 12px;
 }
 
+.iconfont_box{
+    margin-left: -25px;
+    cursor: pointer;
+}
+.iconfont_box:after{
+    content: '';
+    display: inline-block;
+    margin-left: 12px;
+}
+
+.common_input{
+    display: inline-block;
+    height: 25px;
+    padding: 3px 6px;
+    font-size: 14px;
+    line-height: 1.42857143;;
+    /*line-height:1;*/
+    /*line-height: 1.42857143;*/
+    /*line-height: 25px;*/
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+.common_input:focus{
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+}
+
 
 
 
