--- a/ocmoni5/styles/css/s7Query.css
+++ b/ocmoni5/styles/css/s7Query.css
@@ -26,5 +26,5 @@
     width: 50px;
     height: 50px;
     display: inline-block;
-    background-image: url('./images/products/0B5.jpg');
+    background-image: url('../images/products/0B5.jpg');
 }
