--- a/ocmoni6/styles/css/s7Query.css
+++ b/ocmoni6/styles/css/s7Query.css
@@ -28,3 +28,21 @@
     display: inline-block;
     background-image: url('../images/products/0B5.jpg');
 }
+
+/*s7 查询页面的 特殊样式 start*/
+.s7list_panel .panel-body{
+    padding: 0px;
+}
+.s7list_panel .list-group{
+    margin: 0px;
+    border-radius: 0;
+}
+.s7list_panel .panel-title{
+    font-size: 14px;
+    font-weight: 300;
+}
+.s7list_panel .checkbox-inline label{
+    margin-top: 3px;
+}
+/*s7 查询页面的 特殊样式 end*/
+
