--- a/ocmoni7/src/styles/css/oc_common.css
+++ b/ocmoni7/src/styles/css/oc_common.css
@@ -140,7 +140,6 @@ body{
 .customedBlock{ margin-right:10px;}
 .customedBlock span{ padding-right:5px;}
 .blockEditTips{ margin:0 0 10px 20px;}
-
 .moreStatInfoLayout{ margin:5px 30px; padding:5px 0; border-top:1px dotted #999; }
 .moreStatInfoLayout table{ width:40%; line-height:23px;}
 .moreStatInfoLayout table tr td{ border-bottom:1px dotted #BBB;}
@@ -165,14 +164,14 @@ body{
 ul.dropdown-menu-oc{
     position: absolute;
     box-sizing:border-box;
-    background-color:#E9E9E9;
+    background-color:#FFF;
     padding: 0;
     margin: 0;
     width: 100%;
     top: 30px;
     left: 0;
     z-index: 10;
-    display: none;
+    display:none;
     border-left: 1px solid #BEBEBE;
     border-right: 1px solid #BEBEBE ;
     border-bottom: 1px solid #BEBEBE ;
