--- a/ocmoni6/styles/css/common.css
+++ b/ocmoni6/styles/css/common.css
@@ -1,10 +1,10 @@
 .test{
-    height: 1000px;
+    height: 1200px;
 }
 /*主编辑区域**/
 body{
     background-color: #F2F4F7;
-    min-width: 1100px;
+    min-width: 1200px;
     font-size: 12px;
     font-family: "lucida grande",Helvetica,Tahoma,Verdana,Arial,Microsoft YaHei,simsun,sans-serif;
 }
@@ -82,6 +82,36 @@ body{
 .marginLR15{
     margin :0 15px;
 }
+.marginL20{
+    margin-left: 20px;
+}
+.marginR20{
+    margin-right: 20px;
+}
+.marginLR20{
+    margin :0 20px;
+}
+
+.marginL25{
+    margin-left: 25px;
+}
+.marginR25{
+    margin-right: 25px;
+}
+.marginLR25{
+    margin :0 25px;
+}
+
+.marginL30{
+    margin-left: 30px;
+}
+.marginR30{
+    margin-right: 30px;
+}
+.marginLR30{
+    margin :0 30px;
+}
+
 .myhand{
     cursor: pointer;
 }
