--- a/ocmoni6/styles/css/s7Query.css
+++ b/ocmoni6/styles/css/s7Query.css
@@ -10,34 +10,89 @@
     line-height: 50px;
     box-sizing: border-box;
 }
-.s7_list_descr{
-    width: 25%;
-}
 .s7_list_checkbox{
+    display: inline-block;
     width: 5%;
     text-align: center;
 }
-.s7_list_price{
+.productsImg{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background-image: url('../images/products/0B5.jpg');
+}
+
+.s7_list_descr{
+    display: inline-block;
+    width: 25%;
+    padding-left:15px;
+}
+.s7_list_seq{
+    display: inline-block;
+    width: 5%;
+}
+.s7_list_date{
+    display: inline-block;
+    width: 15%;
+}
+.s7_list_status{
+    display: inline-block;
     text-align: right;
-    width: 10%;
+    width: 5%;
+}
+.s7_list_price{
+    display: inline-block;
+    width: 8%;
+    text-align: right;
 }
 .s7_list_level{
     display: inline-block;
-    width: 110px;
+    width: 10%;
     text-align: right;
 }
 .s7_list_geo{
     display: inline-block;
-    width: 115px;
+    width: 10%;
     text-align: right;
 }
-/**s7查询页面特有的样式 end*/
-.productsImg{
-    width: 50px;
-    height: 50px;
+.s7_list_oper{
     display: inline-block;
-    background-image: url('../images/products/0B5.jpg');
+    text-align: right;
+    width: 10%;
+    float: right;
 }
+.s7_list_oper a{
+    color:#000 ;
+}
+.productsImg_0B3{
+    background-image: url(../images/products/0B3.jpg);
+}
+.productsImg_0B5{
+    background-image: url(../images/products/0B5.jpg);
+}
+.productsImg_0BO{
+    background-image: url(../images/products/0BO.jpg);
+}
+.productsImg_0DG{
+    background-image: url(../images/products/0DG.jpg);
+}
+.productsImg_0LO{
+    background-image: url(../images/products/0LO.jpg);
+}
+.productsImg_0LP{
+    background-image: url(../images/products/0LP.jpg);
+}
+.productsImg_0LQ{
+    background-image: url(../images/products/0LQ.jpg);
+}
+.productsImg_0LT{
+    background-image: url(../images/products/0LT.jpg);
+}
+.productsImg_1E{
+    background-image: url(../images/products/1E.jpg);
+}
+/**s7查询页面特有的样式 end*/
+
 
 /*s7 查询页面的 特殊样式 start*/
 .s7list_panel .panel-body{
