--- a/ocmoni6/styles/css/oc_common.css
+++ b/ocmoni6/styles/css/oc_common.css
@@ -35,9 +35,10 @@ body{
 .query_title{
     display: inline-block;
     /*margin: 8px 20px 0 10px;*/
-    margin: 0 20px 0 10px;
+    margin: 8px 20px 0 10px;
     color: #017ebc;
 }
+
 .query_section .query_row:not(:last-child){
     margin-bottom: 5px;
 }
