--- a/ocmoni6/styles/css/oc_edit.css
+++ b/ocmoni6/styles/css/oc_edit.css
@@ -35,6 +35,7 @@
     display: inline-block;
     box-sizing: border-box;
     width: 9%;
+    float: left;
 }
 .content_layout .right{
     display: inline-block;
