--- a/ocmoni6/styles/css/oc_common.css
+++ b/ocmoni6/styles/css/oc_common.css
@@ -111,7 +111,7 @@ body{
     height: 25px;
     padding: 3px 6px;
     font-size: 14px;
-    line-height: 1.42857143;
+    line-height: 1;
     width: 100%;
     /*line-height:1;*/
     /*line-height: 1.42857143;*/
@@ -134,7 +134,7 @@ body{
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
 }
 .two_input{
-	width:72px;
+	width:48%;
 }
 /**old_oc-style css file start*/
 /*****************  xmlValidate *********************/
@@ -170,6 +170,7 @@ body{
 .dropdown-oc{
     position: relative;
     display: inline-block;
+
 }
 ul.dropdown-menu-oc{
     position: absolute;
