--- a/ocmoni6/styles/css/oc_query.css
+++ b/ocmoni6/styles/css/oc_query.css
@@ -111,6 +111,23 @@
 }
 /*s7 查询页面的 特殊样式 end*/
 
+.page-desc{
+    float: right;
+    padding: 23px 0px 21px 15px;
+    line-height: 1.42857143;
+}
+.page-ok{
+    display: inline-block;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    padding: 2px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+.page-ok:hover{
+    border-color: dodgerblue;
+}
+
 
 
 
