--- a/ocmoni6/styles/css/oc_common.css
+++ b/ocmoni6/styles/css/oc_common.css
@@ -16,6 +16,7 @@ body{
 /*bootstrap 样式重置start*/
 .navbar{
     margin-bottom: 0;
+    border-radius: 1px;
 }
 /*bootstrap 样式重置start*/
 .helper_float_left{float:left;}
