--- a/ocmoni6/styles/css/oc_edit.css
+++ b/ocmoni6/styles/css/oc_edit.css
@@ -1,95 +1,3 @@
-/****页面基本样式****/
-.data_section{
-    display: block;
-    background:#FFF url(../images/tui_div2_bg.png) repeat-x top left;
-    border:1px solid #cbcccf;
-    border-radius:2px;
-    box-shadow:0 1px 1px;
-    margin:10px 0 0 0;
-    padding:20px 10px 10px 10px;
-}
-.data_section:after{
-    clear: both;
-    display: table;
-    content: '';
-}
-.title_layout {
-    height: 30px;
-    line-height:30px;
-}
-.title_layout .left{
-    float: left;
-    font-weight:bold;
-    width:90px;
-}
-.title_layout:after{
-    clear: both;
-    display: table;
-    content: '';
-}
-.content_layout{
-    display: block;
-    margin-top: 10px;
-}
-.content_layout .left{
-    display: inline-block;
-    box-sizing: border-box;
-    width: 9%;
-    float: left;
-}
-.content_layout .right{
-    display: inline-block;
-    box-sizing: border-box;
-    background-color:#F2F4F7;
-    border:1px solid #C8D2DD;
-    border-radius:3px;
-    width: 90%;
-    padding:15px 0px 5px;
-}
-.content_layout:after{
-    clear: both;
-    display: table;
-    content: '';
-}
-
-.table_layout{
-    width:540px;
-    padding:5px;
-    border:1px solid #EFEFEF;
-    border-radius:3px;
-    background-color:#FFF;
-    overflow: hidden;
-}
-.table_layout table{
-    border-top:1px solid #DDD;
-    border-left:1px solid #DDD;
-    width:100%;
-}
-.table_layout table tr th,.table_layout table tr td{
-    border-right:1px solid #DDD;
-    border-bottom:1px solid #DDD;
-    padding:1px 5px;
-}
-.table_layout table tr th{
-	box-sizing: border-box;
-    text-align:center;
-    font-weight:bold;
-    background-color:#EEE;
-    height:26px; 
-    line-height:26px; 
-}
-.table_layout table tr:hover{
-    background-color:#F7F7F7;
-}
-td .common_input{
-    height: 23px;
-    line-height: 23px;
-    padding: 1px 1px;
-}
-td input[type=text],td select{
-    width: 100px;
-}
-/****用于checkbox和radio等input框的整合样式****/
 /******链接型按钮******/
 .serviceInputSpan{
     display: inline-block;
@@ -102,39 +10,6 @@ td input[type=text],td select{
     padding:0 10px;
 }
 
-.checkbox-inline label,.radio-inline label{
-    font-size: 12px;
-    font-weight: 100;
-    padding-top: 2px;
-}
-.form-horizontal .iconfont_box{
-    padding-top: 7px;
-}
-.form-horizontal .control-label{
-    font-weight: 100;
-    /* margin-right: 5px; */
-    padding-right:5px;
-}
-.form-horizontal .errorInfo_validate{
-    display: inline-block;
-    margin: 0 0 0 5px;
-    padding-top: 7px;
-    color: red;
-}
-
-.form-horizontal .input_tip{
-    display: inline-block;
-    margin: 0 0 0 5px;
-    padding-top: 7px;
-}
-
-.form-horizontal .form-group{
-    margin-bottom: 5px;
-}
-.form-horizontal .control_right_content{
-    padding-top: 7px;
-}
-
 /**服务选择相关css start*/
 .service_choose_layout {
     background-color:#FCF5DA;
@@ -143,8 +18,6 @@ td input[type=text],td select{
     float:left;
     margin:13px 0 0 130px;
 }
-
-
 .service_choose_layout s {
     border-color:rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #FADC8D;
     border-style:solid;
@@ -240,32 +113,48 @@ span.service_type_F,span.service_type_M,span.delete_service{ height:20px; width:
     border-left:0 none;
 }
 /**服务选择相关css end*/
-.selected_td { background-color: #D9EDF7;}
-.table_control{
-    display: inline-block;
-    height: 30px;
-    line-height: 30px;
-    vertical-align: middle;
-    overflow: hidden;
-}
-.table_reuse{
-    padding-left: 20px;
-}
-.table_footer{
-    display: inline-block;
-    margin-top: 3px;
-   /* float: right;*/
-}
-/*.table_footer:after{
-    clear: both;
-}*/
-.table_footer .btn{
-    height: 22px;
-    padding: 2px 7px 2px 5px;
-}
 .discountBtn {  color:#EEE; padding: 3px 10px; margin:0 0 5px 3px; border-radius: 15px; cursor: pointer;background-color: #AAA;}
 .discountCheck{ background-color: #F20;color: white;}
 .inputDisabled{cursor: not-allowed;background-color: #999999;opacity: 0.3;}
-.fpdaterange .errorInfo_validate{
-    padding-top: 42px;
+
+/*****************  xmlValidate start *********************/
+.xmlResponseLayout{
+    position:fixed;
+    width: 99.3%;
+    bottom:0;
+    background-color:#C8D2DD;
+    border-top:1px solid #999;
 }
+
+.xmlResponseLayout .header{
+    display: block;
+    width: 100%;
+    height: 35px;
+    line-height: 35px;
+    padding: 0 15px;
+}
+.xmlResponseLayout .header:after{
+    clear: both;
+    content: '';
+    display: table;
+}
+
+.xmlResponseLayout .header .title{
+    display: inline-block;
+    width: 100px;
+    font-size: 16px;
+    font-weight: 700;
+}
+.xmlResponseLayout .body{
+    padding: 0 15px;
+}
+.responseLink{
+    display: inline-block;
+    padding:3px 18px 0 10px;
+}
+.responseLinkBottom{
+    display: inline-block;
+    background:url(../images/icon_bottom.png) no-repeat right center;
+}
+.responseLinkTop{ background:url(../images/icon_top.png) no-repeat right 2px;}
+/*****************  xmlValidate end *********************/
